----------------------------------------------------------------------
 OmegaT 2.3.0 update 3
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.3.0 update 3 vs. 2.3.0 update 2

  Bug fixes:

  - Open XML filter: <rPh> tags (phonetic pronunciation) were not 
hidden in OmegaT

----------------------------------------------------------------------
 OmegaT 2.3.0 update 2
----------------------------------------------------------------------
   1 Enhancement
   2 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.3.0 update 2 vs. 2.3.0 update 1

  Other enhancements:

  - Apertium: remove '*' before unknown words and do not translate
tags
  
  Bug fixes:

  - Pipe-sign | missing from fields when copy-pasting
  http://sourceforge.net/support/tracker.php?aid=3395795

  - Parse exception in the LaTeX filter

  Localisation updates:  
  - Spanish localisation updated to 2.3 (UI, documentation, readme)

----------------------------------------------------------------------
 OmegaT 2.3.0 update 1
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   3 Localisation updates
----------------------------------------------------------------------
2.3.0 update 1 vs. 2.3.0 

  Bug fixes:

  - Mozilla DTD handler is skipping segments
  http://sourceforge.net/support/tracker.php?aid=3369466

  Localisation updates:  

  - Dutch localisation updated to 2.3, backported from 2.5 (UI)
  - Hungarian localisation updated to 2.3 (UI, Instant Start)
  - Italian localisation updated to 2.3 (UI, Instant Start, readme)

----------------------------------------------------------------------
 OmegaT 2.3.0
----------------------------------------------------------------------
  10 Enhancements
   6 Bug fixes
   2 Localisation updates