@@ -1435,6 +1435,7 @@ CCP_PASTE=Paste
 
 # Machine translation engines
 MT_ENGINE_GOOGLE=Google Translate
+MT_ENGINE_GOOGLE2=Google Translate v2
 MT_ENGINE_BELAZAR=Belazar
 MT_ENGINE_APERTIUM=Apertium
 
